--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="br.com.recife.vacina.vacinarecife">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.VacinasActivity"></activity>
+        <activity android:name=".activity.VacinasActivity" />
+        <activity android:name=".activity.PostosActivity"></activity>
     </application>
 
 </manifest>
